# polyfem-python

./: CMakeLists.txt  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: continuous.yml
cmake/recipes/: polyfem.cmake  polyfem_data.cmake  pybind11.cmake
polyfempy/: Settings.py  __init__.py  command.py
src/: CMakeLists.txt  binding.cpp  raster.cpp  raster.hpp
src/differentiable/: CMakeLists.txt  adjoint.cpp  binding.hpp  diff_cache.cpp  objective.cpp  utils.cpp
src/mesh/: CMakeLists.txt  binding.hpp  mesh.cpp
src/solver/: CMakeLists.txt  binding.hpp  nl_problem.cpp
src/state/: CMakeLists.txt  binding.hpp  state.cpp
test/: test.py  test_basic.ipynb  test_basic.py  test_diff.py  test_differentiable.ipynb  test_sim.py
