[build-system]
requires = ["setuptools", "wheel", "pybind11", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "polyfempy"
version = "0.8"
description="Polyfem Python Bindings"
readme = "README.md"
authors = [
  { name = "Zizhou Huang", email = "zizhou@nyu.edu" },
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
